refactor(ai): 重构AI配置管理API并优化前端组件样式
- 将AI供应商预设数据从本地移到后端API
- 更新AI配置相关API端点路径结构
- 优化聊天页面头部布局和消息卡片样式
- 调整书架页面布局和滚动行为
- 更新首页书籍卡片阴影效果
- 升级版本号到1.0.3.20